# unpod-python-sdk

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: 00-overview.md  01-architecture.md  02-management-sdk.md  03-connectivity-sdk.md  04-adapters.md  05-quickstart.md  06-browser-quickstart.md
docs/plans/: 2026-07-15-telephony-consolidation-design.md  2026-07-15-telephony-consolidation-plan.md
examples/: browser_agent.py  flow_smoke.py  full_agent_setup.py  test_call.py
examples/browser_playground/: .env.example  .gitignore  README.md  _urls.py  agent.py  run.py
examples/browser_playground/pipe-ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
examples/browser_playground/pipe-ui/src/: app.ts  (+1 more)
playground/: .env.example  README.md  run.py
playground/agents/: __init__.py  catalog.py  flows.py
playground/agents/flows/: bank_agent.json  flow_golf_course_booking_ai.json  health_wellness_3node.json  health_wellness_booking_flow.json
playground/docs/: 2026-06-10-conversation-state-design.md  architecture.md  connectivity.md
playground/harness/: __init__.py  api.py  control.py  runner.py  voice_profiles.py
playground/web/: package-lock.json  package.json  tsconfig.json
playground/web/src/: config.ts  main.tsx  style.css  types.ts
src/unpod/: __init__.py  _base_url.py  _protocol.py  client.py
src/unpod/adapters/: __init__.py  anthropic.py  base.py  http.py  langchain.py  mcp.py  openai.py  superdialog.py
src/unpod/connectivity/: __init__.py  bridge.py  bridge_auth.py  bridge_dialer.py  bridge_server.py  call_context.py  hooks.py  metrics.py  runner.py  session.py  usage.py
src/unpod/management/: __init__.py  _auth.py  _http.py  api_keys.py  calls.py  numbers.py  pipes.py  recordings.py  sessions.py  transcripts.py  trunks.py  voice_profiles.py
src/unpod/models/: __init__.py  api_key.py  call.py  number.py  orchestrator_session.py  pipe.py  recording.py  session.py  transcript.py  trunk.py  voice_profile.py
src/unpod/observability/: __init__.py
src/unpod/telephony/: __init__.py
tests/: test_adapters.py  test_adapters_http.py  test_adapters_langchain.py  test_adapters_mcp.py  test_auth.py  test_base_url.py  test_bridge.py  test_bridge_auth.py  test_bridge_dialer.py  test_bridge_server.py  test_contracts.py  test_hooks.py  test_http.py  test_integration.py  test_management.py  test_models.py  test_observability.py  test_playground_harness.py  test_playground_supervoice_url.py  test_protocol.py  test_protocol_v2.py  test_runner.py  test_runner_dial_out.py  test_session.py  test_session_draft.py  test_session_midstream_cancel.py  test_telephony.py  test_usage_reporter.py
tests/examples/: test_browser_playground.py
unpod_playground/: README.md  __init__.py  run.py
unpod_playground/agents/: __init__.py  catalog.py  faq_bot.py
unpod_playground/harness/: __init__.py  api.py  events.py  provisioning.py  runner.py  voice_profiles.py
unpod_playground/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
unpod_playground/web/src/: config.ts  style.css
(+31 files in other folders)
